[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Art/start-assets/player.png" type="Texture" id=1]
[ext_resource path="res://Source/Actors/Script/Player.gd" type="Script" id=2]
[ext_resource path="res://Source/Entities/Scene/MeleeAttack.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 47.366, 48.3008 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2147483678
script = ExtResource( 2 )
Melee = ExtResource( 3 )

[node name="player" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -48 )
shape = SubResource( 1 )

[node name="PhysicalHitbox" type="Area2D" parent="."]

[node name="PhysicalBox" type="CollisionShape2D" parent="PhysicalHitbox"]
position = Vector2( -0.374573, -47.1967 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="area_entered" from="PhysicalHitbox" to="." method="_on_PhysicalHitbox_area_entered"]
[connection signal="area_exited" from="PhysicalHitbox" to="." method="_on_PhysicalHitbox_area_exited"]
[connection signal="body_entered" from="PhysicalHitbox" to="." method="_on_PhysicalHitbox_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
